--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">FreePIE IMU</string>
+    <string name="app_name">Motion Tracker</string>
     <string name="target_ip">Target IP</string>
     <string name="target_port">Target port</string>
     <string name="start">Start</string>
